--- a/styles.css
+++ b/styles.css
@@ -75,5 +75,24 @@ div {
     margin-right: 10px;
 }
 #dope {
-    font-size: 60px;
+    font-size: 20px;
+}
+
+.card {
+    display: none;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    width: 250px;
+    margin: 20px auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.user-img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
+}
+.error {
+    color: red;
 }
